--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
   --bg-color: #f1ecec;
   --text-color: #1f2937;
-  
 }
 .dark {
   --bg-color: #0e0a18;
@@ -13,9 +12,38 @@
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
-  
 }
 
+@theme inline {
+  /* Shades of Blue: #7096FE */
+  --color-blue-100: #eef2ff;
+  --color-blue-200: #e0e7ff;
+  --color-blue-300: #c7d2fe;
+  --color-blue-400: #a5b4fc;
+  --color-blue-500: #7096fe; /* Your Base Color */
+  --color-blue-600: #4f46e5; /* For hover states */
+  --color-blue-700: #4338ca;
+  --color-blue-800: #3730a3;
+  --color-blue-900: #312e81; /* Darkest for deep UI elements */
+
+  /* Shades Purple: #A855F7 */
+  --color-purple-100: #f5f3ff;
+  --color-purple-200: #ede9fe;
+  --color-purple-300: #ddd6fe;
+  --color-purple-400: #c084fc;
+  --color-purple-500: #a855f7; /* Your Base Color */
+  --color-purple-600: #9333ea;
+  --color-purple-700: #7e22ce;
+  --color-purple-800: #6b21a8;
+  --color-purple-900: #581c87;
+
+  --slate-100: #f8fafc; /* Near white (Main Headings) */
+  --slate-400: #94a3b8; /* Dimmed Text (Descriptions) */
+  --slate-700: #334155; /* Muted borders */
+  --slate-800: #1e293b; /* Pill badge border */
+  --slate-900: #0f172a; /* Near-background surface */
+  --slate-950: #0b0b1a; /* The deepest background in your image */
+}
 
 .Typewriter__wrapper {
   font-size: 2.2em !important;
@@ -39,15 +67,17 @@ body {
   padding: 10px;
   width: 100% !important;
 }
-/* .react-activity-calendar {
-  overflow-y: hidden !important;
-} */
 .react-activity-calendar__legend-month {
   color: var(--text-color);
   font-size: 20px;
 }
 
 /* about page image animation */
+
+.animate-float {
+  animation: float 4s ease-in-out infinite;
+}
+
 @keyframes float {
   0%,
   100% {
@@ -56,10 +86,6 @@ body {
   50% {
     transform: translateY(-8px);
   }
-}
-
-.animate-float {
-  animation: float 4s ease-in-out infinite;
 }
 
 /* Custom purple toast styles */
