--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,11 @@
 @import 'tailwindcss';
+@custom-variant dark (&:where(.dark, .dark *));
 
-:root {
-  --bg-color: #f1ecec;
-  --text-color: #1f2937;
-}
 .dark {
   --bg-color: #0e0a18;
-  --text-color: #d1d5db;
 }
-
 body {
   background-color: var(--bg-color);
-  color: var(--text-color);
 }
 
 @theme inline {
